MDEV-26216 : SIGSEGV in MDL_lock::incompatible_granted_types_bitmap on HANDLER OPEN w/ duplicate table creation

HANDLER commands are not yet supported in a cluster. Return
error message if user tries to use them.